objects/SharepointFieldMapping__mdt.object
<CustomObject>
    <description>The field metadata for mapping the Sharepoint form</description>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <metadataRelationshipControllingField>SharepointFieldMapping__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sharepoint_field_mappings</relationshipLabel>
        <relationshipName>Sharepoint_field_mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Sharepoint Field Mappings</relationshipLabel>
        <relationshipName>SharepointFieldMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>RecordType Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharepointSetting__c</fullName>
        <label>Sharepoint Setting</label>
        <referenceTo>SharepointSetting__mdt</referenceTo>
        <relationshipLabel>Sharepoint Field Mappings</relationshipLabel>
        <relationshipName>SharepointFieldMappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>UIVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UI Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Sharepoint Field Mapping</label>
    <listViews>
        <fullName>Sharepoint_Mapping</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>RecordTypeName__c</columns>
        <columns>Object__c</columns>
        <columns>Field__c</columns>
        <columns>Value__c</columns>
        <columns>Required__c</columns>
        <columns>SharepointSetting__c</columns>
        <columns>UIVisible__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sharepoint Mapping</label>
    </listViews>
    <pluralLabel>Sharepoint Field Mappings</pluralLabel>
    <validationRules>
        <fullName>Validated_Non_UI_Value</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(UIVisible__c),
ISBLANK(Value__c)
)</errorConditionFormula>
        <errorDisplayField>Value__c</errorDisplayField>
        <errorMessage>Value is Required for Non UI Visible Fields</errorMessage>
    </validationRules>
</CustomObject>